# automotive-news-daily

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: collect-daily.yml
data/: seen.json
docs/plans/: 2026-06-29-automotive-news-design.md  2026-06-29-implementation-plan.md  2026-06-30-quality-intel-redesign.md
entrypoints/: build_site.py  collect_daily.py
reports/: 2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
src/: brief.py  config.py  dedup.py  filter.py  llm_client.py  schemas.py  site_builder.py  summarizer.py
src/collectors/: base.py  feeds.py  nhtsa.py  rapex.py  rss.py  samr.py
src/delivery/: feishu.py
src/templates/: index.html.j2
tests/: test_brief.py  test_collect_daily.py  test_dedup.py  test_feishu.py  test_filter.py  test_llm_client.py  test_regulatory.py  test_rss_collector.py  test_schemas.py  test_site_builder.py  test_summarizer.py
